:arrow_up: Criando migration de Especificação e Continuando com a documentação
