# src/routes/specification.routes.ts
@@ -1,10 +1,13 @@
 import { Router } from "express";
 
 import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import {ListSpecificationController} from '../modules/cars/useCases/listSpecification/ListSpecificationController'
 const specificationRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
+const listSpecificationController = new ListSpecificationController();
 
 specificationRoutes.post("/", createSpecificationController.handle);
+specificationRoutes.get('/', listSpecificationController.handle);
 
 export { specificationRoutes };
